Removed sun.misc.BASE64 usage, replaced with apache commons